меняет текст на главной странице

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ rel="stylesheet">
 
       <div class="container">
       <h3>Свадьба на 60 человек</h3>
-      <p>USTA - Всегда приятно вернуться.</p>
+      <p>USTA - Всегда приятно вернуться</p>
 <a href="https://mosgorka.ru/" 
 class="button"target="_blank">Открыть сайт</a>
 
